- upgrade: Enhanced the database backup process with proper error handling
- fix: Fixed storage reset command transaction issues (#21)
- fix: Fixed CustomTags connect apply issue with third-party plugins
- chore: Updated Polish and Chinese translations
- chore: Changed statis queries to be constant
- remove: Removed some unused functions

--- Optimisation notes ---

- optimise: Core > Placeholder usages has been improved

# 2025.04.18 - 1.0.40

- fix: Activity settings didn't respect 0 values
- chore: Add latvian translation

# 2025.02.26 - 1.0.39

- fix: Bans module connect full issue
- fix: Wrong scoreboard rank with 0 points when a rank is set to a 0 point boundry

# 2025.02.24 - 1.0.38

- feat: Enhanced rank point commands to support offline targeting via SteamID
- feat: Introduced the banip command in the bans module
- feat: Updated the Toplists module to return only the TOPx clantag based on the defined maximum value
- feat: Added a configuration option for CustomTag removal delay to improve compatibility
- optimise: Eliminated redundant task assignment operators from Task.Run calls
- fix: Corrected improper usage of the shared API within the bans module
- fix: Prevented an infinite retry loop when a disconnected player's data fails to load
- fix: Resolved the premature "player not yet loaded" error log in the bans module
- chore: Relocated the top clantag translation functionality to the TopLists module

# 2025.02.01 - 1.0.37

- feat: Enhanced module reset functionality with unique module identifiers for future compatibility
- upgrade: Implemented additional validation checks in toplist caching system
- optimise: Integrated transaction support for reset-all operations
- fix: Resolved player storage reset command issues

# 2025.01.31 - 1.0.36

- fix: ChatSpy event had a collection modification issue

# 2025.01.30 - 1.0.35

- optimise: Reduced connection count used on player load
- fix: Module loading and rank issues

# 2025.01.29 - 1.0.34
